# fork-learn-claude-code

./: .gitignore  README.md  README_zh.md  pyproject.toml  s01_agent_loop.py  s02_tool_use.py  s03_todo_write.py  v0_bash_agent.py  v1_basic_agent.py  v2_todo_agent.py  v3_subagent.py  v4_skills_agent.py
backend/: README.md  agent_core.py  main.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CodeEditor.tsx  FileExplorer.tsx  LogMessage.tsx
sync/: README.md
sync/docs/en/: s05-skill-loading.md
sync/docs/ja/: s05-skill-loading.md
sync/docs/zh/: s05-skill-loading.md
